--- a/scripts/install
+++ b/scripts/install
@@ -25,7 +25,8 @@ ynh_replace --match="https://www.pinkarrows.app" --replace="https://$domain" --f
 grep -o 'https://cdn.jsdelivr.net[^"]*' $index_html_path | sort -u | while read -r url ; do         # e.g. https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
     filepath="src/libs/$(echo $url | cut -d'/' -f5-)"                                               # e.g. src/libs/bootstrap@5.3.1/dist/css/bootstrap.min.css
     if [ ! -f "$install_dir/$filepath" ]; then
-        ynh_safe_rm "$(echo $filepath | cut -d'/' -f-3 | cut -d'@' -f1)@*"                          # e.g. src/libs/bootstrap@* 
+        ynh_safe_rm "$(echo $filepath | cut -d'/' -f-3 | cut -d'@' -f1)@*"                          # e.g. src/libs/bootstrap@*         
+        mkdir -p "$(dirname $install_dir/$filepath)"                                                # make sure directory exists
         curl -o "$install_dir/$filepath" $url
     fi
     ynh_replace --match="$url" --replace="$filepath" --file="$index_html_path"
@@ -36,6 +37,7 @@ grep -o 'https://cdnjs.cloudflare.com[^"]*' $index_html_path | sort -u | while r
     filepath="src/libs/$(echo $url | cut -d'/' -f6-)"                                               # e.g. src/libs/jquery/3.5.1/jquery.min.js
     if [ ! -f "$install_dir/$filepath" ]; then                                     
         ynh_safe_rm "$(echo $filepath | cut -d'/' -f-3)/*"                                          # e.g. src/libs/jquery/*
+        mkdir -p "$(dirname $install_dir/$filepath)"                                                # make sure directory exists
         curl -o "$install_dir/$filepath" $url
     fi
     ynh_replace --match="$url" --replace="$filepath" --file="$index_html_path"
