--- a/scripts/install
+++ b/scripts/install
@@ -30,7 +30,9 @@ mkdir -p "$install_dir/src/libs/bootstrap@2.7.6"
 grep -o 'https://cdn.jsdelivr.net[^"]*' $index_html_path | sort -u | while read -r url ; do         # e.g. https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
     filepath="src/libs/$(echo $url | cut -d'/' -f5-)"                                               # e.g. src/libs/bootstrap@5.3.1/dist/css/bootstrap.min.css
     if [ ! -f "$install_dir/$filepath" ]; then
-        ynh_safe_rm "$(echo $filepath | cut -d'/' -f-3 | cut -d'@' -f1)@"*                          # e.g. src/libs/bootstrap@*         
+		if [ -d "$install_dir/src/libs" ]; then
+			find "$install_dir/src/libs" -name "$(echo $filepath | cut -d'/' -f-3 | cut -d'@' -f1)@*" -type d -exec ynh_safe_rm {} +                           # e.g. src/libs/bootstrap@*         
+        fi 
         mkdir -p "$(dirname $install_dir/$filepath)"                                                # make sure directory exists
         curl -s -o "$install_dir/$filepath" $url
     fi
