--- a/scripts/install
+++ b/scripts/install
@@ -18,35 +18,22 @@ chown -R "$app:www-data" "$install_dir"
 index_html_path="$install_dir/index.html"
 
 # Replace upstream canonical link with YNH app domain's  
-ynh_replace --match="https://www.pinkarrows.app" --replace="https://$domain" --file=$index_html_path
-
-#test
-mkdir -p "$install_dir/src/libs/bootstrap@2.3.4"
-mkdir -p "$install_dir/src/libs/bootstrap@2.7.4"
-mkdir -p "$install_dir/src/libs/bootstrap@2.7.6"
+ynh_replace --match="https://www.pinkarrows.app" --replace="https://$domain" --file="$index_html_path"
 
 # Download remote assets locally and subsitute remote paths with local ones
 ## cdn.jsdelivr.net URLs
 grep -o 'https://cdn.jsdelivr.net[^"]*' $index_html_path | sort -u | while read -r url ; do         # e.g. https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
     filepath="src/libs/$(echo $url | cut -d'/' -f5-)"                                               # e.g. src/libs/bootstrap@5.3.1/dist/css/bootstrap.min.css
-    if [ ! -f "$install_dir/$filepath" ]; then
-		if [ -d "$install_dir/src/libs" ]; then
-			find "$install_dir/src/libs" -name "$(echo $filepath | cut -d'/' -f-3 | cut -d'@' -f1)@*" -type d -exec ynh_safe_rm {} +                           # e.g. src/libs/bootstrap@*         
-        fi 
-        mkdir -p "$(dirname $install_dir/$filepath)"                                                # make sure directory exists
-        curl -s -o "$install_dir/$filepath" $url
-    fi
+    mkdir -p "$(dirname $install_dir/$filepath)"                                                    # make sure directory exists
+    curl -s -o "$install_dir/$filepath" $url
     ynh_replace --match="$url" --replace="$filepath" --file="$index_html_path"
 done
 
 ## cdnjs.cloudflare.com URLs
 grep -o 'https://cdnjs.cloudflare.com[^"]*' $index_html_path | sort -u | while read -r url ; do     # e.g. https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js
     filepath="src/libs/$(echo $url | cut -d'/' -f6-)"                                               # e.g. src/libs/jquery/3.5.1/jquery.min.js
-    if [ ! -f "$install_dir/$filepath" ]; then                                     
-        ynh_safe_rm "$(echo $filepath | cut -d'/' -f-3)/*"                                          # e.g. src/libs/jquery/*
-        mkdir -p "$(dirname $install_dir/$filepath)"                                                # make sure directory exists
-        curl -s -o "$install_dir/$filepath" $url
-    fi
+    mkdir -p "$(dirname $install_dir/$filepath)"                                                    # make sure directory exists
+    curl -s -o "$install_dir/$filepath" $url
     ynh_replace --match="$url" --replace="$filepath" --file="$index_html_path"
 done
 
