--- a/scripts/install
+++ b/scripts/install
@@ -32,7 +32,7 @@ ynh_setup_source --dest_dir="$install_dir/src/libs/emojibase" --source_id="emoji
 ## Keep only 'emojibase-emojibase-data-15.3.2/packages/data/en/packages/data/en/*'
 find "$install_dir/src/libs/emojibase" -mindepth 1 \
                                    -not -path "$install_dir/src/libs/emojibase/packages/data/en" \
-                                   -not -path "$install_dir/src/libs/emojibase/packages/data/en/*" \ 
+                                   -not -path "\'$install_dir/src/libs/emojibase/packages/data/en/*\'" \ 
                                    -delete 
 ## Change endings in .raw.json to .json to match the CDN's file naming
 find "$install_dir/src/libs/emojibase/packages/data/en/*" -type f -name "*raw.json" -exec rename 's/raw\.json/json/' {} \;
