--- a/scripts/install
+++ b/scripts/install
@@ -49,13 +49,13 @@ ynh_replace --match="https://www.pinkarrows.app" --replace="https://$domain" --f
 pa_ynh_download_remote_assets --url_format='https://cdn.jsdelivr.net[^]*' \                              # https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
                               --cmd_filepath='cut -d/ -f5-' \                                            # src/libs/bootstrap@5.3.1/dist/css/bootstrap.min.css
                               --cmd_path_wildcard='$(echo $filepath | cut -d/ -f-3 | cut -d@ -f1)@*' \   # src/libs/bootstrap@*
-                              --event="$(basename $BASH_SOURCE)"										 # script's filename
+                              --event="$(basename $BASH_SOURCE)" \                                       # script's filename
                               --source_file="$index_html_path"
 
-pa_ynh_download_remote_assets --url_format='https://cdnjs.cloudflare.com[^"]*' \                     	 # https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js
+pa_ynh_download_remote_assets --url_format='https://cdnjs.cloudflare.com[^"]*' \                         # https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js
                               --cmd_filepath='cut -d/ -f6-' \                                            # src/libs/jquery/3.5.1/jquery.min.js
                               --cmd_path_wildcard='$(echo $filepath | cit -d/ -f-3)/*' \                 # src/libs/jquery/*
-                              --event="$(basename $BASH_SOURCE)"										 # script's filename
+                              --event="$(basename $BASH_SOURCE)" \                                       # script's filename
                               --source_file="$index_html_path"
 
 ## Remove script block containing reference to posthog (analytics)
