try replacing all CDN calls with local calls - fix cmd 24

--- a/scripts/install
+++ b/scripts/install
@@ -16,7 +16,7 @@ ynh_script_progression "Setting up source files..."
 # Pink Arrows source
 ynh_setup_source --dest_dir="$install_dir"
 
-# Libs picmo (no CDN)
+# Remove CDN link for libs picmo & picmo_popup_picker
 ynh_setup_source --dest_dir="$install_dir/src/libs/picmo" --source_id="picmo"
 ynh_setup_source --dest_dir="$install_dir/src/libs/picmo_popup_picker" --source_id="picmo-popup-picker"
 #~ find "$install_dir/src/lib/picmo*" -mindepth 1 
@@ -27,17 +27,17 @@ ynh_setup_source --dest_dir="$install_dir/src/libs/picmo_popup_picker" --source_
                                    #~ -not -path '$install_dir/src/libs/picmo*/packages/picmo/*' 
                                    #~ -delete # keep only 'picmo-5.8.5/packages/popup-picker/*' and 'picmo-5.8.5/packages/picmo/*'   
 
-# Lib emojibase (no CDN)
+# Remove CDN link for lib emojibase
 ynh_setup_source --dest_dir="$install_dir/src/libs/emojibase" --source_id="emojibase"
 ## Keep only 'emojibase-emojibase-data-15.3.2/packages/data/en/packages/data/en/*'
-#~ find "$install_dir/src/libs/emojibase" -mindepth 1 \
-                                       #~ -not -path "$install_dir/src/libs/emojibase/packages" \
-                                       #~ -not -path "$install_dir/src/libs/emojibase/packages/data" \
-                                       #~ -not -path "$install_dir/src/libs/emojibase/packages/data/en" \
-                                       #~ -not -path "$install_dir/src/libs/emojibase/packages/data/en/*" \
-                                       #~ -print
-## Change endings in .raw.json to .json to match the CDN's file naming
-#~ find "$install_dir/src/libs/emojibase/packages/data/en/*" -type f -name "*raw.json" -exec rename 's/raw\.json/json/' {} \;
+find "$install_dir/src/libs/emojibase" -mindepth 1 \
+                                       -not -path "$install_dir/src/libs/emojibase/packages" \
+                                       -not -path "$install_dir/src/libs/emojibase/packages/data" \
+                                       -not -path "$install_dir/src/libs/emojibase/packages/data/en" \
+                                       -not -path "$install_dir/src/libs/emojibase/packages/data/en/*" \
+                                       -delete
+## Change endings in .raw.json to .json to match the CDN's file naming (and what expects the app)
+find "$install_dir/src/libs/emojibase/packages/data/en/*" -type f -name "*raw.json" -exec rename 's/raw\.json/json/' {} \;
 
 # Modify index.html
 index_html_path="$install_dir/index.html"
