try replacing all CDN calls with local calls - fix cmd 25

--- a/scripts/install
+++ b/scripts/install
@@ -35,9 +35,9 @@ find "$install_dir/src/libs/emojibase" -mindepth 1 \
                                        -not -path "$install_dir/src/libs/emojibase/packages/data" \
                                        -not -path "$install_dir/src/libs/emojibase/packages/data/en" \
                                        -not -path "$install_dir/src/libs/emojibase/packages/data/en/*" \
-                                       -delete
+                                       -print
 ## Change endings in .raw.json to .json to match the CDN's file naming (and what expects the app)
-find "$install_dir/src/libs/emojibase/packages/data/en/*" -type f -name "*raw.json" -exec rename 's/raw\.json/json/' {} \;
+find "$install_dir/src/libs/emojibase/packages/data/en" " -exec rename 's/raw\.json/json/' {} \;
 
 # Modify index.html
 index_html_path="$install_dir/index.html"
