--- a/scripts/install
+++ b/scripts/install
@@ -37,7 +37,8 @@ find "$install_dir/src/libs/emojibase" -mindepth 1 \
                                        -not -path "$install_dir/src/libs/emojibase/packages/data/en/*" \
                                        -delete
 ## Change endings in .raw.json to .json to match the CDN's file naming (and what expects the app)
-find "$install_dir/src/libs/emojibase/packages/data/en" -exec rename 's/raw\.json/json/' {} \;
+#~ find "$install_dir/src/libs/emojibase/packages/data/en" -exec rename 's/raw\.json/json/' {} \;
+find "$install_dir/src/libs/emojibase/packages/data/en" -depth -name '*.raw.json' -exec sh -c 'f="{}"; mv -- "$f" "${f%.raw.json}.json"' \;
 
 # Modify index.html
 index_html_path="$install_dir/index.html"
